--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "axios": "^0.24.0",
     "bootstrap": "^5.1.3",
     "firebase": "^9.3.0",
+    "nanoid": "^3.1.30",
     "react": "^17.0.2",
     "react-calendar": "^3.5.0",
     "react-dom": "^17.0.2",
